fix social links going off screen

--- a/style.css
+++ b/style.css
@@ -31,4 +31,5 @@ img {
     display: flex;
     justify-content: center;
     gap: 1em;
+    flex-wrap: wrap;
 }
